# Polaris-Engine

./: .gitignore  CMakeLists.txt  FEATURES.md  IMPLEMENTATION.md  README.md  analyze_stats.py  build.ps1  build.sh  run1.txt
src/: agent.cpp  agent.hpp  config.cpp  config.hpp  imgui_panel.cpp  imgui_panel.hpp  main.cpp  main_sdl.cpp  neural_network.cpp  neural_network.hpp  scheduler.cpp  scheduler.hpp  simulon_env.cpp  simulon_env.hpp  spatial_grid.cpp  spatial_grid.hpp  statistics.cpp  statistics.hpp  visualize.cpp  visualize.hpp  world.cpp  world.hpp
